welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	while(vacation){
		if (day<6){
			return "10:00"
		}else{
			return "OFF"
		}
	}


	while(!vacation){
		if (day<6){
			return "7:00"
		}else{
			return "10:00"
		}
	}
}

//def alarmClock(day:Int, vacation:Boolean): String = {
//	if (!vacation && day < 6){
	//	return "7:00";
	//}
	//if (vacation && day < 6){
	///	return "10:00";
	///}
	///if (!vacation && day > 6){
	///	return "10:00";
	//
	///}else{
	///	return "OFF";
//	}
//}




//def alarmClock(day:Int, vacation:Boolean): String = {
//	if (vacation && day < 6){
	//	return  "10:00" ;
	//}
	//if (!vacation && day < 6){
	//	return  "7:00" ;
//	}
   //  if (vacation && day > 6){
	//	return  "OFF" ;
//	}
	//if (!vacation && day > 6){
	//	return  "10:00" ;
	//}
//}